* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.7...dev][Unreleased]]

*** Added
*** Changed
+ *tetragono*: The interface of =save_result= allow only =(state, result, whole_result)= now.
*** Deprecated
*** Removed
+ *TAT.hpp*: Remove deprecated tensor member function =get_rank=, =find_rank_from_name= and =get_rank_from_name=.
*** Fixed
+ *TAT.hpp*: Fix a bug about parity sign when =merge_map= is empty.
+ *TAT.hpp*: Fix invalid access to a empty =vector= when splitting the first edge into zero edges.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.6...v0.3.7][v0.3.7]] - 2023-08-15

*** Added
+ *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
  are the summation of several local observables.
+ *tetragono*: Add arguments support for =gm_conf_create= and =ap_conf_create= in tetragono shell.
+ *tetragono*: Add a member dict called =attribute= to =AbstractState=, which may contain customed data used by user.
*** Changed
+ *tetragono*: =save_result= accept another parameter, which is the total result of the whole observers set. Its
  signature is =state=, =result=, =whole_result= and =step= now.
+ *tetraku*: Change the defnition of x/y/z link in kitaev model. The bond inside one tensor is z link now.
+ *tetragono*: =gm_run(_g)= will now return/yield all the measurement result instead of energy only.
*** Deprecated
+ *tetragono*: The previous signature of =save_result=: =state=, =result= and =step= is deprecated.
*** Removed
+ *tetragono*: Remove the deprecated function =natural_gradient= and the deprecated paramter =metric_inverse_epsilon=
  for =gm_run=.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.5...v0.3.6][v0.3.6]] - 2023-05-26

*** Added
+ *TAT.hpp*: Add =clear_fermi_symmetry= for tensor with fermionic symmetry, which convert the tensor to the simplest
  fermionic tensor, tensor with parity symmetry.
+ *TAT.py*: Add python binding for =clear_fermi_symmetry=.