@@ -29,8 +29,7 @@ namespace TAT {
    inline timer conjugate_guard("conjugate");
 
    template<typename ScalarType, typename Symmetry, typename Name>
-   Tensor<ScalarType, Symmetry, Name>
-   Tensor<ScalarType, Symmetry, Name>::conjugate(bool default_is_physics_edge, const std::unordered_set<Name>& exclude_names) const {
+   Tensor<ScalarType, Symmetry, Name> Tensor<ScalarType, Symmetry, Name>::conjugate(bool trivial_metric) const {
       auto timer_guard = conjugate_guard();
       auto pmr_guard = scope_resource(default_buffer_size);
       if constexpr (Symmetry::length == 0) {
@@ -56,9 +55,7 @@ namespace TAT {
       signs.set_data(signs_pool.data());
       if constexpr (Symmetry::is_fermi_symmetry) {
          for (auto i = 0; i < rank(); i++) {
-            const bool is_physics_edge = default_is_physics_edge ^ (exclude_names.find(names(i)) != exclude_names.end());
-            // default is physics ^ it is not default = it is physics edge
-            const bool is_physics_edge_with_arrow_true = edges(i).arrow() && is_physics_edge;
+            const bool trivial_metric_with_arrow_true = edges(i).arrow() && trivial_metric;
             Size self_size = signs.dimensions(i);
             Size in_size = signs.leadings(i);
             Size out_size = signs.size() == 0 ? 0 : signs.size() / (self_size * in_size);
@@ -75,7 +72,7 @@ namespace TAT {
                      // to get full transpose sign, calculate (it & 2) != 0 later
                      signs_pool[offset_for_z].first += 1;
                      // physics edge apply sign if arrow is true
-                     signs_pool[offset_for_z].second ^= is_physics_edge_with_arrow_true;
+                     signs_pool[offset_for_z].second ^= trivial_metric_with_arrow_true;
                   }
                }
             }
